# nekosu

./: .gitmodules  Kbuild  Kconfig  Makefile  README.md
.github/workflows/: build-apk.yml  build-release.yml  ddk-lkm.yml
app/: .gitignore
app/app/: .editorconfig  build.gradle.kts
app/app/src/main/cpp/: CMakeLists.txt  libnksu.cpp  sigcheck.cpp  sigcheck.h  su.cpp  su.hpp
app/app/src/main/cpp/include/: log.h  sigcheck.h  su.h
app/gradle/: libs.versions.toml
docs/: README.md
patch/: 4.9openat.patch  4.9proc.patch  5.15-android13_openat.patch  5.15mkdirat.patch  build.patch
scripts/: 5.15.sh  autogenhead.py  config  configure.sh  install.py  patch.sh
src/: .clang-format  Kbuild  Kconfig  Makefile  SELinux.c  allowlist.c  anonfd.c  apksig.c  capraise.c  check.c  execv.c  fm.c  fmac.h  fmac_check.c  fmac_procfs.c  get_manager.c  hijack.c  hook.c  init.h  ioctl.c  kprobe.c  log.c  manager.c  netlink.c  nksu.c  ns.c  privilege.c  procfs.c  profile.c  root.c  rsa_pub.c  scope.c  selinux.c  sigcheck.c  syscall.c  totp.c  tracepoint.c  uid_cap.c
src/check/: check.mk  function.c  nksu_task_mark.c
src/debug/: debug.c  debug.h
src/flags/: flags.h  flags_kprobe.c  flags_tracepoint.c
src/fmac/: check.c  check.h  fm.c  hashtable.c  hook.c  init.c  log.c  openat.c  procfs.c  syscall.c
src/include/: allowlist.h  anonfd.h  arch.h  eventfd.h  fmac.h  hook.h  init.h  ioctl.h  key.h  klog.h  log.h  manager.h  nksu.h  ns.h  op_code.h  privilege.h  scope.h  selinux.h  syscall.h  tracepoint.h  uid_cap.h  (+1 more)
userspace/: .gitignore  gen_totp.go  sig.c  su.c  su.go
(+70 files in other folders)
